--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "daisyui": "^1.24.3",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "17.0.10",
@@ -20,7 +21,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
-    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.0.15",
     "typescript": "4.5.5"
   }
 }
