--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "daisyui": "^1.24.3",
     "next": "12.0.8",
     "react": "17.0.2",
+    "react-code-input": "^3.10.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
   },
